// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PaginationNavigation should render component 1`] = `
<PaginationButton
  className="mfui-pagination-navigation mfui-pagination-navigation_direction_right"
  dataAttrs={
    Object {
      "root": Object {
        "data-test": "test",
      },
    }
  }
>
  <test-file-stub
    className="mfui-pagination-navigation__icon"
  />
</PaginationButton>
`;

exports[`PaginationNavigation should render with left direction 1`] = `
<PaginationButton
  className="mfui-pagination-navigation mfui-pagination-navigation_direction_left"
>
  <test-file-stub
    className="mfui-pagination-navigation__icon"
  />
</PaginationButton>
`;
